--- a/index.html
+++ b/index.html
@@ -5,7 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>world cup</title>
+    <!------------------
+        font  awesome
+     ------------------>
+    <script src="https://kit.fontawesome.com/54f995b5e5.js" crossorigin="anonymous"></script>
+    <!-----------------
+        google font
+    ------------------->
     <link rel="stylesheet" href="styels/style.css" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <!----------------
+             top player
+        ----------------->
+      <section class="container player-info">
+        <div class="top-player">
+          <div class="player-detail">
+            <div>
+              <h1>
+                The Greatest <br />
+                show on the <br />
+                earth
+              </h1>
+              <p>
+                Contrary to popular belief, Lorem Ipsum is not simply <br />
+                random text. It has roots in a piece of classical Latin literaturebr <br />
+                from 45 BC, making it over 2000 years old.
+              </p>
+            </div>
+            <div>
+              <a href="">Watch Live <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+          </div>
+          <div class="player-img">
+            <img src="assets/Banner Image.png" alt="" />
+          </div>
+        </div>
+      </section>
+      <!-----------------
+         top blogs
+        ---------------->
+      <section class="container">
+        <div class="top-blogs">
+          <div class="angcor">
+            <div class="top-Match angcor-1">
+              <a href="">Upcoming Match</a>
+            </div>
+            <div class="top-Group angcor-1">
+              <a href="">All Group</a>
+            </div>
+            <div class="top-Blog angcor-1">
+              <a href="">Blogs</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
