--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="top-blogs">
           <div class="angcor">
             <div class="top-Match angcor-1">
-              <a href="">Upcoming Match</a>
+              <a href="https://humairakhatun010.github.io/top-match/">Upcoming Match</a>
             </div>
             <div class="top-Group angcor-1">
               <a href="">All Group</a>
@@ -59,8 +59,152 @@
               <a href="">Blogs</a>
             </div>
           </div>
+          <div class="blogs">
+            <div class="blog">
+              <img src="assets/Blog Image.png" alt="" />
+              <p>Transfer</p>
+              <h5>
+                Transfer Live: Chlesea in talks <br />
+                over Kimpenbe transfer
+              </h5>
+              <div class="blog-info">
+                <img src="assets/Time Icon.png" alt="" />
+                <span>10h</span>
+                <img class="thamble" src="assets/Chat Icon.png" alt="" />
+                <span>23</span>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="assets/Blog Image.png" alt="" />
+              <p>Transfer</p>
+              <h5>
+                Transfer Live: Chlesea in talks <br />
+                over Kimpenbe transfer
+              </h5>
+              <div class="blog-info">
+                <img src="assets/Time Icon.png" alt="" />
+                <span>10h</span>
+                <img class="thamble" src="assets/Chat Icon.png" alt="" />
+                <span>23</span>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="assets/Blog Image.png" alt="" />
+              <p>Transfer</p>
+              <h5>
+                Transfer Live: Chlesea in talks <br />
+                over Kimpenbe transfer
+              </h5>
+              <div class="blog-info">
+                <img src="assets/Time Icon.png" alt="" />
+                <span>10h</span>
+                <img class="thamble" src="assets/Chat Icon.png" alt="" />
+                <span>23</span>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="assets/Blog Image.png" alt="" />
+              <p>Transfer</p>
+              <h5>
+                Transfer Live: Chlesea in talks <br />
+                over Kimpenbe transfer
+              </h5>
+              <div class="blog-info">
+                <img src="assets/Time Icon.png" alt="" />
+                <span>10h</span>
+                <img class="thamble" src="assets/Chat Icon.png" alt="" />
+                <span>23</span>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="assets/Blog Image.png" alt="" />
+              <p>Transfer</p>
+              <h5>
+                Transfer Live: Chlesea in talks <br />
+                over Kimpenbe transfer
+              </h5>
+              <div class="blog-info">
+                <img src="assets/Time Icon.png" alt="" />
+                <span>10h</span>
+                <img class="thamble" src="assets/Chat Icon.png" alt="" />
+                <span>23</span>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="assets/Blog Image.png" alt="" />
+              <p>Transfer</p>
+              <h5>
+                Transfer Live: Chlesea in talks <br />
+                over Kimpenbe transfer
+              </h5>
+              <div class="blog-info">
+                <img src="assets/Time Icon.png" alt="" />
+                <span>10h</span>
+                <img class="thamble" src="assets/Chat Icon.png" alt="" />
+                <span>23</span>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="assets/Blog Image.png" alt="" />
+              <p>Transfer</p>
+              <h5>
+                Transfer Live: Chlesea in talks <br />
+                over Kimpenbe transfer
+              </h5>
+              <div class="blog-info">
+                <img src="assets/Time Icon.png" alt="" />
+                <span>10h</span>
+                <img class="thamble" src="assets/Chat Icon.png" alt="" />
+                <span>23</span>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="assets/Blog Image.png" alt="" />
+              <p>Transfer</p>
+              <h5>
+                Transfer Live: Chlesea in talks <br />
+                over Kimpenbe transfer
+              </h5>
+              <div class="blog-info">
+                <img src="assets/Time Icon.png" alt="" />
+                <span>10h</span>
+                <img class="thamble" src="assets/Chat Icon.png" alt="" />
+                <span>23</span>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="assets/Blog Image.png" alt="" />
+              <p>Transfer</p>
+              <h5>
+                Transfer Live: Chlesea in talks <br />
+                over Kimpenbe transfer
+              </h5>
+              <div class="blog-info">
+                <img src="assets/Time Icon.png" alt="" />
+                <span>10h</span>
+                <img class="thamble" src="assets/Chat Icon.png" alt="" />
+                <span>23</span>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
+      <footer class="container">
+        <div class="top-footer">
+          <div class="goal-top">
+            <h1>Goal</h1>
+          </div>
+          <hr />
+          <div class="footer-a">
+            <a href="">Contact Us</a>
+            <a href="">Terms of Service</a>
+            <a href=""> Privacy Policy</a>
+            <a href="">Privacy Settings </a>
+            <a href=""> Goal App</a>
+            <a href=""> Goal Live</a>
+          </div>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
